--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -7,7 +7,32 @@
 		</div>
 	</div>
 
-	<div *ngIf="key != '' && !loading">
+  <div *ngIf="key != '' && !loading && error">
+    <div class="container" style="max-width: 100%;">
+      <div class="row" style="padding: 4% 0 2%;">
+        <div class="alert alert-warning alert-gd-2 alert-gd-error text-center">
+          <div class="row" style="display: flex;">
+            <div class="col-xs-2" style="display: flex;">
+              <mat-icon style="color: #18bc9c; font-size: 70px;">report</mat-icon>
+            </div>
+            <div class="col-xs-10">
+              <div [outerHTML]="error"></div>
+              <p>Index key: {{index_name}}</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 text-center" style="padding-top: 50px;">
+          <button routerLink="/profile" class="btn btn-lg btn-success mr-1">
+            <mat-icon>keyboard_arrow_left</mat-icon> Back to my intel
+          </button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+	<div *ngIf="key != '' && !loading && !error">
 		<div class="index-overview">
 
 			<div class="">
@@ -64,34 +89,34 @@
 					</div>
 
 					<!--recent conquests-->
-					<div *ngIf="!loadingInfo && recent_conquests && recent_conquests.length > 0" class="hidden-xs hidden-sm">
-						<mat-card class="dense-card conquests-card">
-							<mat-card-title>
-								<div class="form-group row" style='margin: 0px;'>
-									<h3 style='font-weight: 300; color: #304357; margin-top: 0px;'><span class='world-title' style='color: #18BC9C;'>Recent sieges</span>&nbsp;&nbsp;
-										<a class="a-link-dialog" *ngIf="recent_conquests.length >= 2" (click)="loadSiegeListDialog()" style="color: #949494;">
-											Show all sieges&nbsp;<mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon>
-										</a>
-									</h3>
-								</div>
-							</mat-card-title>
-							<mat-card-content>
-								<div class="conquests-list-vertical">
-									<div class="conquest-item" *ngFor="let conquest of recent_conquests">
-										<app-siege
-											[embedded]="true"
-											[isCard]="true"
-											[hideKey]="false"
-											[conquest]="conquest"
-											[conquestId]="conquest?.conquest_id"
-											[world]="world"
-											[key] = "key">
-										</app-siege>
-									</div>
-								</div>
-							</mat-card-content>
-						</mat-card>
-					</div>
+<!--					<div *ngIf="!loadingInfo && recent_conquests && recent_conquests.length > 0" class="hidden-xs hidden-sm">-->
+<!--						<mat-card class="dense-card conquests-card">-->
+<!--							<mat-card-title>-->
+<!--								<div class="form-group row" style='margin: 0px;'>-->
+<!--									<h3 style='font-weight: 300; color: #304357; margin-top: 0px;'><span class='world-title' style='color: #18BC9C;'>Recent sieges</span>&nbsp;&nbsp;-->
+<!--										<a class="a-link-dialog" *ngIf="recent_conquests.length >= 2" (click)="loadSiegeListDialog()" style="color: #949494;">-->
+<!--											Show all sieges&nbsp;<mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon>-->
+<!--										</a>-->
+<!--									</h3>-->
+<!--								</div>-->
+<!--							</mat-card-title>-->
+<!--							<mat-card-content>-->
+<!--								<div class="conquests-list-vertical">-->
+<!--									<div class="conquest-item" *ngFor="let conquest of recent_conquests">-->
+<!--										<app-siege-->
+<!--											[embedded]="true"-->
+<!--											[isCard]="true"-->
+<!--											[hideKey]="false"-->
+<!--											[conquest]="conquest"-->
+<!--											[conquestId]="conquest?.conquest_id"-->
+<!--											[world]="world"-->
+<!--											[key] = "key">-->
+<!--										</app-siege>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</mat-card-content>-->
+<!--						</mat-card>-->
+<!--					</div>-->
 
 					<!--recent latest intel-->
 					<div *ngIf="latest_intel && latest_intel.length>0" class="hidden-xs hidden-sm">
