--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -6,44 +6,43 @@
 				<h1>
 					<i class="fa fa-university gd-secondary" aria-hidden="true"></i>&nbsp;<span><strong class="gd-secondary">Userscript:</strong> Enemy City Indexer</span>
 				</h1>
-				<h4 class="gd-tertiary">Easily collect and share intelligence about enemy cities with your own private index</h4>
+				<h4 class="gd-tertiary hidden-xs">Easily collect and share intelligence about enemy cities with your own private index</h4>
 			</mat-card-title>
 			<mat-card-content>
 
 
-        <br/>
-        <br/>
-        <div class="container">
+        <div class="container hidden-xs hidden-sm">
+          <br/>
 
           <div class="row bs-wizard" style="border-bottom:0;">
 
-            <div class="col-xs-3 bs-wizard-step complete">
+            <div class="col-xs-3 bs-wizard-step complete" matTooltip="An account is required to collect and share enemy city intelligence">
               <div class="text-center bs-wizard-stepnum">Step 1</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot"></a>
               <a class="bs-wizard-pulsate"></a>
-              <div class="bs-wizard-info text-center"><strong>Create</strong> a GrepoData account</div>
+              <div class="bs-wizard-info text-center"><strong>Create</strong><span class="hidden-xs hidden-sm hidden-md"> a GrepoData account</span><span class="hidden-lg"> an account</span></div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step"><!-- complete -->
+            <div class="col-xs-3 bs-wizard-step" matTooltip="The userscript adds in-game functionality and links to your GrepoData account"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 2</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
               <div class="bs-wizard-info text-center"><strong>Install</strong> the userscript</div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step"><!-- complete -->
+            <div class="col-xs-3 bs-wizard-step" matTooltip="Upload new reports while playing the game by clicking the 'Index +' button on forum and inbox reports"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 3</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
-              <div class="bs-wizard-info text-center"><strong>Upload</strong> new reports<span class="hidden-xs hidden-sm"> from within the game by using the 'index +' button.</span></div>
+              <div class="bs-wizard-info text-center"><strong>Upload</strong> new reports</div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step"><!-- complete -->
+            <div class="col-xs-3 bs-wizard-step" matTooltip="Create and share an index with your allies to share the collected intel"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 4</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
-              <div class="bs-wizard-info text-center"><strong>Share</strong><span class="hidden-xs"> the intel</span><span class="hidden-sm hidden-xs"> by creating and sharing an <strong>index</strong>.</span></div>
+              <div class="bs-wizard-info text-center"><strong>Share</strong> via an <strong>index</strong></div>
             </div>
 
           </div>
