--- a/src/app/indexer/landing-page/landing-page.component.scss
+++ b/src/app/indexer/landing-page/landing-page.component.scss
@@ -64,6 +64,9 @@ mat-form-field {
   .index-input-left {
     margin-top: 280px;
   }
+  .decorated-card-header-secondary {
+    margin-bottom: 0;
+  }
 }
 
 @media (max-width:1150px) {
