--- a/src/app/auth/login-register/login-register.component.html
+++ b/src/app/auth/login-register/login-register.component.html
@@ -3,7 +3,7 @@
   <div class="row">
 
     <div class="col-xs-12 index-input-container">
-      <div class="row flex-row">
+      <div class="row flex-row login-row-container">
         <div class="col-xs-12 col-sm-6 index-input index-input-left">
           <div class="form-panel register">
             <div class="form-header">
@@ -56,7 +56,7 @@
                 </div>
                 <p class="invalid-feedback" *ngIf="register_error!=''" style="color: #a94442 !important;">{{register_error}}</p>
                 <div class="form-group" style="padding-top: 30px;">
-                  <button type="submit" [disabled]="register_loading">Register</button>
+                  <button class="login-submit" type="submit" [disabled]="register_loading">Register</button>
                   <mat-progress-bar *ngIf="register_loading" class="btn-progress-bar" mode="indeterminate"></mat-progress-bar>
                 </div>
               </form>
@@ -70,7 +70,7 @@
 
           <div class="form-panel login">
 
-            <div style="text-align: center; font-weight: 800; font-size: 50px">
+            <div class="gd-login-logo">
               <span style="color: rgb(103, 103, 103)">GREPO</span>
               <span style="color: rgb(24, 188, 156)">DATA</span>
             </div>
@@ -111,7 +111,7 @@
                 </div>
                 <p class="invalid-feedback" *ngIf="login_error!=''" style="color: #a94442 !important;">{{login_error}}</p>
                 <div class="form-group">
-                  <button type="submit" [disabled]="login_loading">Log In</button>
+                  <button class="login-submit" type="submit" [disabled]="login_loading">Log In</button>
                   <mat-progress-bar *ngIf="login_loading" class="btn-progress-bar" mode="indeterminate"></mat-progress-bar>
                 </div>
               </form>
@@ -156,7 +156,7 @@
                 </div>
                 <p class="invalid-feedback" *ngIf="reset_error!=''" style="color: #a94442 !important;"><br/><br/>{{reset_error}}</p>
                 <div class="form-group">
-                  <button type="submit" [disabled]="reset_loading">Request new password</button>
+                  <button class="login-submit" type="submit" [disabled]="reset_loading">Request new password</button>
                   <mat-progress-bar *ngIf="reset_loading" class="btn-progress-bar" mode="indeterminate"></mat-progress-bar>
                 </div>
               </form>
